# k6502

./: .gitignore  .hgignore  README.md  configure.ac
src/: Makefile.am  cpu.cc  cpu.h  easy6502.cc  ram.cc  ram.h  test.cc
