AC_PREREQ([2.61])
AC_INIT([k6502],
        [2.3], 
        [kyle@tyrfingr.is],
        [k6502],
        [])
AM_INIT_AUTOMAKE([1.11 foreign])
AC_CONFIG_SRCDIR([src/cpu.h])
AC_CHECK_HEADERS
AC_CANONICAL_HOST
AC_CONFIG_FILES([Makefile src/Makefile])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_CXX

AC_OUTPUT
